# repo-to-llm

./: .repo  README.md  out.txt  pyproject.toml
repo_to_llm/: cli.py  core.py
src/repo_to_llm/: cli.py  config.py  core.py  defaults.yml  pattern_matching.py
test/: test_core.py
