[project]
name = "repo-to-llm"
version = "0.1.0"
description = "CLI tool to convert a code repository into LLM-friendly markdown"
authors = [{ name = "Luca Bottero", email = "lucabottero99@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["cli", "llm", "markdown", "codebase"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gitignore-parser",
]

[project.scripts]
repo-to-llm = "repo_to_llm.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
